# nexus-eeprom-24c32

./: .gitignore  README.md  west.yml
.github/workflows/: ci.yml
include/: eeprom_24c32.h
src/: eeprom_24c32.c
tests/: CMakeLists.txt  test_eeprom_24c32_init.cpp  test_eeprom_24c32_read.cpp  test_eeprom_24c32_write.cpp  test_nhal_i2c_context_stub.h
